--- a/index.html
+++ b/index.html
@@ -15,22 +15,43 @@
   </head>
   <body>
     <header>
-      <img src="./img/Imagen1.jpg" class="logo" />
-      <h1>Mis Resoluciones</h1>
+      <div class="holder">
+        <img src="./img/logoSad.jpg" class="logo" />
+        <h1>Mis Resoluciones</h1>
+      </div>
     </header>
     <nav>
-      <ul>
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Resoluciones</a></li>
-        <li><a href="#">Novedades</a></li>
-        <li><a href="#">Contacto</a></li>
+      <ul class="holder">
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="resoluciones.html">Resoluciones</a></li>
+        <li><a href="Novedades.html">Novedades</a></li>
+        <li><a href="contacto">Contacto</a></li>
       </ul>
     </nav>
-    <main>aca va el contenido</main>
+    <main class="holder">
+      <div>
+        <img src="./img/reunidos.jpg" alt="avion" />
+      </div>
+    <div class="columnas">
+      <section class="bienvenidos">
+        <h2>Bienvenidos</h2>
+        <p>
+          Tenemos el agrado de compartir esta nueva herramienta, donde podrán encontrar y descargar las resoluciones de Titularidad, MAD y Acrecentamiento, que han llegado a esta Secretaría de Asuntos Docentes de Tres de Febrero. 
+        </p>
+      </section>
+      <section class="nosotros">
+        <h2>Nosotros</h2>
+        <div class="consultanos">
+          <span class="cita">Consultanos</span>
+          <span class="autor">consultas@abc.gob.ar</span>
+        </div>
+      </section>
+    </div>
+  </main>
     <footer>
       <p>
-        Diseñado por Vero Bar &copy; 2024 - Todos los derechos reservados - SAD
-        Tres de Febrero
+        SAD de Tres de Febrero &copy; 2024 - Todos los derechos reservados -
+        Diseño Vero.
       </p>
     </footer>
   </body>
