listo contactoo y novedades

--- a/novedades.html
+++ b/novedades.html
@@ -22,33 +22,19 @@
     </header>
     <nav>
       <ul class="holder">
-        <li><a class="activo" href="index.html">Inicio</a></li>
+        <li><a href="index.html">Inicio</a></li>
         <li><a href="resoluciones.html">Resoluciones</a></li>
-        <li><a href="Novedades.html">Novedades</a></li>
+        <li><a class="activo" href="Novedades.html">Novedades</a></li>
         <li><a href="contacto.html">Contacto</a></li>
       </ul>
     </nav>
     <main class="holder">
-      <div>
-        <img src="./img/reunidos.jpg" alt="avion" />
-      </div>
-    <div class="columnas">
-      <section class="bienvenidos">
-        <h2>Bienvenidos</h2>
-        <p>
-          Tenemos el agrado de compartir esta nueva herramienta para descargar las resoluciones de Titularidad, MAD y Acrecentamiento, que ya han llegado a esta Secretaría de Asuntos Docentes de Tres de Febrero. 
-        </p>
-      </section>
-      <section class="nosotros">
-        <h2>Nosotros</h2>
-        <div class="consultanos">
-          <p>Queremos brindarte un servicio de alta calidad y valor.</p>
-          <span class="cita">Consultanos</span>
-          <span class="autor">consultas@abc.gob.ar</span>
-        </div>
-      </section>
-    </div>
-  </main>
+      <h2 class="reso">Ultimas Cadenas</h2>
+      <p>
+        Tener en cuenta que las novedades se publican en la pagina Web de la Secretaría de Asuntos Docentes de Tres de Febrero, en el siguiente link:
+        <a href="https:/sad117.com.ar/?cat=8">https://sad3febrero.com.ar/novedades/</a>
+      </p>
+    </main>
     <footer>
       <p>
         SAD de Tres de Febrero &copy; 2024 - Todos los derechos reservados -
