--- a/resoluciones.html
+++ b/resoluciones.html
@@ -22,38 +22,31 @@
     </header>
     <nav>
       <ul class="holder">
-        <li><a class="activo" href="index.html">Inicio</a></li>
-        <li><a href="resoluciones.html">Resoluciones</a></li>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a class="activo" href="resoluciones.html">Resoluciones</a></li>
         <li><a href="Novedades.html">Novedades</a></li>
         <li><a href="contacto.html">Contacto</a></li>
       </ul>
     </nav>
     <main class="holder">
-      <div>
-        <img src="./img/reunidos.jpg" alt="avion" />
-      </div>
-    <div class="columnas">
-      <section class="bienvenidos">
-        <h2>Bienvenidos</h2>
-        <p>
-          Tenemos el agrado de compartir esta nueva herramienta para descargar las resoluciones de Titularidad, MAD y Acrecentamiento, que ya han llegado a esta Secretaría de Asuntos Docentes de Tres de Febrero. 
-        </p>
-      </section>
-      <section class="nosotros">
-        <h2>Nosotros</h2>
-        <div class="consultanos">
-          <p>Queremos brindarte un servicio de alta calidad y valor.</p>
-          <span class="cita">Consultanos</span>
-          <span class="autor">consultas@abc.gob.ar</span>
+      <h2 class="reso">Aquí puede ver y descargar sus Resoluciones</h2>
+      <div class="cuil">
+        <input type="number" id="cuilInput" placeholder="Ingrese su CUIL" />
+        <div id="cuilMessage" style="display: none">
+          Por favor, ingrese un CUIL válido de 11 números.
         </div>
-      </section>
-    </div>
-  </main>
+        <div class="button-container">
+          <button onclick="validarCUIL()">Enviar</button>
+          <button onclick="resetearFormulario()">Reset</button>
+        </div>
+      </div>
+    </main>
     <footer>
       <p>
         SAD de Tres de Febrero &copy; 2024 - Todos los derechos reservados -
         Diseño VBar
       </p>
     </footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
