--- a/novedades.html
+++ b/novedades.html
@@ -31,8 +31,9 @@
     <main class="holder">
       <h2 class="reso">Ultimas Cadenas</h2>
       <p>
-        Tener en cuenta que las novedades se publican en la pagina Web de la Secretaría de Asuntos Docentes de Tres de Febrero, en el siguiente link:
-        <a href="https:/sad117.com.ar/?cat=8">https://sad3febrero.com.ar/novedades/</a>
+        Tener en cuenta que las novedades se publican en la pagina Web de la
+        Secretaría de Asuntos Docentes de Tres de Febrero, en el siguiente link:
+        <a href="https:/sad117.com.ar">https://sad3febrero.com.ar/novedades/</a>
       </p>
     </main>
     <footer>
