--- a/novedades.html
+++ b/novedades.html
@@ -33,7 +33,7 @@
       <p>
         Tener en cuenta que las novedades se publican en la pagina Web de la
         Secretaría de Asuntos Docentes de Tres de Febrero, en el siguiente link:
-        <a href="https:/sad117.com.ar">https://sad3febrero.com.ar/novedades/</a>
+        <a href="https://sad117.com.ar/?cat=8">Cadenas</a>
       </p>
     </main>
     <footer>
