ajustes y cambios de proyecto

--- a/novedades.html
+++ b/novedades.html
@@ -29,11 +29,11 @@
       </ul>
     </nav>
     <main class="holder">
-      <h2 class="reso">Ultimas Cadenas</h2>
-      <p>
-        Tener en cuenta que las novedades se publican en la pagina Web de la
-        Secretaría de Asuntos Docentes de Tres de Febrero, en el siguiente link:
-        <a href="https://sad117.com.ar/?cat=8">Cadenas</a>
+      <h2 class="reso">Últimas Cadenas</h2>
+      <p class="linkcadenas">
+        Las novedades se publican en la pagina Web de la
+        Secretaría de Asuntos Docentes de Tres de Febrero. Para acceder haz click en 
+        <a href="https://sad117.com.ar/?cat=8">este link</a>
       </p>
     </main>
     <footer>
