--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mis Resoluciones - SAD Tres de Febrero</title>
+    <title>Vero</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,30 +17,39 @@
     <header>
       <div class="holder">
         <img src="./img/logoSad.jpg" class="logo" />
-        <h1>Mis Resoluciones</h1>
+        <h1>Mis Archivos</h1>
       </div>
     </header>
     <nav>
       <ul class="holder">
         <li><a class="activo" href="index.html">Inicio</a></li>
         <li><a href="resoluciones.html">Resoluciones</a></li>
-        <li><a href="Novedades.html">Novedades</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
+        <li><a href="insumos.html">Insumos</a></li>
+        <li><a href="utiles.html">Recursos</a></li>
       </ul>
     </nav>
     <main class="holder">
       <div>
-        <img src="./img/reunidos.jpg" alt="avion" />
+        <img src="./img/laptop.jpg" alt="avion" />
       </div>
-    <div class="columnas">
+    <div class="contactos">
       <section class="bienvenidos">
-        <h2>Bienvenidos</h2>
-        <p>
-          Tenemos el agrado de compartir esta nueva herramienta para descargar las resoluciones de Titularidad, MAD y Acrecentamiento, que ya han llegado a esta Secretaría de Asuntos Docentes de Tres de Febrero. 
-        </p>
+        <h2>
+          Contactos de Interés
+        </h2>
+        <dl>
+          <dt>Consultas en general</dt>
+          <dd>sad117@abc.gob.ar</dd>
+          <dt>Jubilaciones</dt>
+          <dd>jubilaciones117@abc.gob.ar</dd>
+          <dt>Actos Públicos</dt>
+          <dd>actopublico117@abc.gob.ar</dd>
+          <dt>Inscripciones</dt>
+          <dd>inscri3defebrero@abc.gob.ar</dd>
+        </dl>
       </section>
-      <section class="nosotros">
-        <h2>Nosotros</h2>
+      <section class="novedades">
+        <h2>Novedades</h2>
         <div class="consultanos">
           <p>Queremos brindarte un servicio de alta calidad y valor.</p>
           <span class="cita">Consultanos</span>
@@ -51,7 +60,7 @@
   </main>
     <footer>
       <p>
-        SAD de Tres de Febrero &copy; 2024 - Todos los derechos reservados -
+        &copy; 2024 - Todos los derechos reservados -
         Diseño VBar
       </p>
     </footer>
