dl se agrega en index

--- a/insumos.html
+++ b/insumos.html
@@ -22,19 +22,14 @@
     </header>
     <nav>
       <ul class="holder">
-        <li><a href="index.html">Inicio</a></li>
+        <li><a class="activo" href="index.html">Inicio</a></li>
         <li><a href="resoluciones.html">Resoluciones</a></li>
-        <li><a class="activo" href="Novedades.html">Novedades</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
+        <li><a href="insumos.html">Insumos</a></li>
+        <li><a href="utiles.html">Recursos</a></li>
       </ul>
     </nav>
     <main class="holder">
-      <h2 class="reso">Últimas Cadenas</h2>
-      <p class="linkcadenas">
-        Las novedades se publican en la pagina Web de la
-        Secretaría de Asuntos Docentes de Tres de Febrero. Para acceder haz click en 
-        <a href="https://sad117.com.ar/?cat=8">este link</a>
-      </p>
+
     </main>
     <footer>
       <p>
