--- a/resoluciones.html
+++ b/resoluciones.html
@@ -22,10 +22,10 @@
     </header>
     <nav>
       <ul class="holder">
-        <li><a href="index.html">Inicio</a></li>
-        <li><a class="activo" href="resoluciones.html">Resoluciones</a></li>
-        <li><a href="Novedades.html">Novedades</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
+        <li><a class="activo" href="index.html">Inicio</a></li>
+        <li><a href="resoluciones.html">Resoluciones</a></li>
+        <li><a href="insumos.html">Insumos</a></li>
+        <li><a href="utiles.html">Recursos</a></li>
       </ul>
     </nav>
     <main class="holder">
