--- a/utiles.html
+++ b/utiles.html
@@ -22,10 +22,10 @@
     </header>
     <nav>
       <ul class="holder">
-        <li><a href="index.html">Inicio</a></li>
+        <li><a class="activo" href="index.html">Inicio</a></li>
         <li><a href="resoluciones.html">Resoluciones</a></li>
-        <li><a href="Novedades.html">Novedades</a></li>
-        <li><a class="activo" href="contacto.html">Contacto</a></li>
+        <li><a href="insumos.html">Insumos</a></li>
+        <li><a href="utiles.html">Recursos</a></li>
       </ul>
     </nav>
 
@@ -68,6 +68,14 @@
         </ul>
       </div>
     </main>
+    <section>
+      <h2 class="reso">Últimas Cadenas</h2>
+      <p class="linkcadenas">
+        Las novedades se publican en la pagina Web de la
+        Secretaría de Asuntos Docentes de Tres de Febrero. Para acceder haz click en 
+        <a href="https://sad117.com.ar/?cat=8">este link</a>
+      </p>
+    </section>
     <footer>
       <p>
         SAD de Tres de Febrero &copy; 2024 - Todos los derechos reservados -
