--- a/resoluciones.html
+++ b/resoluciones.html
@@ -24,7 +24,7 @@
       <ul class="holder">
         <li><a class="activo" href="index.html">Inicio</a></li>
         <li><a href="resoluciones.html">Resoluciones</a></li>
-        <li><a href="insumos.html">Disposiciones</a></li>
+        <li><a href="disposiciones.html">Disposiciones</a></li>
         <li><a href="utiles.html">Recursos</a></li>
       </ul>
     </nav>
@@ -50,37 +50,69 @@
     </footer>
     <script>
       window.resolucionesPorDni = {
-        "25523186": "https://drive.google.com/file/d/1uRcr4YNp4z7rhBN3csuHrxClymkMhyJ6/view?usp=drive_link",
-        "27919794": "https://drive.google.com/file/d/1uRcr4YNp4z7rhBN3csuHrxClymkMhyJ6/view?usp=drive_link",
-        "28304282": "https://drive.google.com/file/d/1uRcr4YNp4z7rhBN3csuHrxClymkMhyJ6/view?usp=drive_link",
-        "27966756": "https://drive.google.com/file/d/1uRcr4YNp4z7rhBN3csuHrxClymkMhyJ6/view?usp=drive_link",
-        "26230462": "https://drive.google.com/file/d/1uRcr4YNp4z7rhBN3csuHrxClymkMhyJ6/view?usp=drive_link",
-        "22591053": "https://drive.google.com/file/d/1uRcr4YNp4z7rhBN3csuHrxClymkMhyJ6/view?usp=drive_link",
-        "22060140": "https://drive.google.com/file/d/1uRcr4YNp4z7rhBN3csuHrxClymkMhyJ6/view?usp=drive_link",
-        "21728848": "https://drive.google.com/file/d/1uRcr4YNp4z7rhBN3csuHrxClymkMhyJ6/view?usp=drive_link",
-        "18252047": "https://drive.google.com/file/d/1YXakdLw9LTyrwiehz1l_aI4U3FT6V5BE/view?usp=drive_link",
-        "14163535": "https://drive.google.com/file/d/1YXakdLw9LTyrwiehz1l_aI4U3FT6V5BE/view?usp=drive_link",
-        "20051718": "https://drive.google.com/file/d/1YXakdLw9LTyrwiehz1l_aI4U3FT6V5BE/view?usp=drive_link",
-        "22230882": "https://drive.google.com/file/d/1YXakdLw9LTyrwiehz1l_aI4U3FT6V5BE/view?usp=drive_link",
-        "25431573": "https://drive.google.com/file/d/1YXakdLw9LTyrwiehz1l_aI4U3FT6V5BE/view?usp=drive_link",
-        "20684602": "https://drive.google.com/file/d/1YXakdLw9LTyrwiehz1l_aI4U3FT6V5BE/view?usp=drive_link",
-        "26666681": "https://drive.google.com/file/d/1YXakdLw9LTyrwiehz1l_aI4U3FT6V5BE/view?usp=drive_link",
-        "12966214": "https://drive.google.com/file/d/1YXakdLw9LTyrwiehz1l_aI4U3FT6V5BE/view?usp=drive_link",
-        "24061261": "https://drive.google.com/file/d/1YXakdLw9LTyrwiehz1l_aI4U3FT6V5BE/view?usp=drive_link",
-        "12439616": "https://drive.google.com/file/d/1YXakdLw9LTyrwiehz1l_aI4U3FT6V5BE/view?usp=drive_link",
-        "20055826": "https://drive.google.com/file/d/1YXakdLw9LTyrwiehz1l_aI4U3FT6V5BE/view?usp=drive_link",
-        "13501433": "https://drive.google.com/file/d/1YXakdLw9LTyrwiehz1l_aI4U3FT6V5BE/view?usp=drive_link",
-        "21588427": "https://drive.google.com/file/d/1YXakdLw9LTyrwiehz1l_aI4U3FT6V5BE/view?usp=drive_link",
-        "23833653": "https://drive.google.com/file/d/1YXakdLw9LTyrwiehz1l_aI4U3FT6V5BE/view?usp=drive_link",
-        "25871671": "https://drive.google.com/file/d/1YXakdLw9LTyrwiehz1l_aI4U3FT6V5BE/view?usp=drive_link",
-        "18428404": "https://drive.google.com/file/d/1YXakdLw9LTyrwiehz1l_aI4U3FT6V5BE/view?usp=drive_link",
-        "20455423": "https://drive.google.com/file/d/1YXakdLw9LTyrwiehz1l_aI4U3FT6V5BE/view?usp=drive_link",
-        "17304286": "https://drive.google.com/file/d/1YXakdLw9LTyrwiehz1l_aI4U3FT6V5BE/view?usp=drive_link",
-        "24796041": "https://drive.google.com/file/d/1YXakdLw9LTyrwiehz1l_aI4U3FT6V5BE/view?usp=drive_link",
-        "21981482": "https://drive.google.com/file/d/1YXakdLw9LTyrwiehz1l_aI4U3FT6V5BE/view?usp=drive_link",
-        "26229658": "https://drive.google.com/file/d/1YXakdLw9LTyrwiehz1l_aI4U3FT6V5BE/view?usp=drive_link",
-        "17231592": "https://drive.google.com/file/d/1YXakdLw9LTyrwiehz1l_aI4U3FT6V5BE/view?usp=drive_link"
-      };
+  "resoluciones": {
+    "resolucion_1": {
+      "url": " https://drive.google.com/file/d/1uRcr4YNp4z7rhBN3csuHrxClymkMhyJ6/view?usp=drive_link ",
+      "dni": [
+        "25523186",
+        "27919794",
+        "28304282",
+        "27966756",
+        "26230462",
+        "22591053",
+        "22060140",
+        "21728848"
+      ]
+    },
+    "resolucion_2": {
+      "url": " https://drive.google.com/file/d/1YXakdLw9LTyrwiehz1l_aI4U3FT6V5BE/view?usp=drive_link ",
+      "dni": [
+        "18252047",
+        "14163535",
+        "20051718",
+        "22230882",
+        "25431573",
+        "20684602",
+        "26666681",
+        "12966214",
+        "24061261",
+        "12439616",
+        "20055826",
+        "13501433",
+        "21588427",
+        "23833653",
+        "25871671",
+        "18428404",
+        "20455423",
+        "17304286",
+        "24796041",
+        "21981482",
+        "26229658",
+        "17231592"
+      ]
+    },
+    "resolucion_3": {
+      "url": " https://drive.google.com/drive/folders/138dXR8Zu809ih9OJ3WX8x1b5X8xNPx4i?usp=drive_link ",
+      "dni": [
+        "24608650",
+        "24753717",
+        "18585164",
+        "25787340",
+        "18023744",
+        "22030521",
+        "26816394",
+        "21681889",
+        "12438073",
+        "24446927",
+        "6409326",
+        "22426962",
+        "22128435",
+        "16689457"
+      ]
+    }
+  }
+}
+;
     </script>
     <script src="js/script.js"></script>
   </body>
