--- a/utiles.html
+++ b/utiles.html
@@ -24,7 +24,7 @@
       <ul class="holder">
         <li><a class="activo" href="index.html">Inicio</a></li>
         <li><a href="resoluciones.html">Resoluciones</a></li>
-        <li><a href="insumos.html">Insumos</a></li>
+        <li><a href="disposiciones.html">Disposiciones</a></li>
         <li><a href="utiles.html">Recursos</a></li>
       </ul>
     </nav>
