separado mejor ché

--- a/resoluciones.html
+++ b/resoluciones.html
@@ -33,7 +33,7 @@
       <div class="cuil">
         <input type="number" id="dniInput" placeholder="Ingrese su DNI" />
         <div id="dniMessage" style="display: none">
-          Por favor, ingrese un DNI válido de 7 u 8 dígitos.
+          Por favor, ingrese un DNI válido de 7 u 8 números.
         </div>
         <div class="button-container">
           <button onclick="validarDNI()">Enviar</button>
@@ -48,48 +48,7 @@
         Diseño VBar
       </p>
     </footer>
-    <script>
-      window.resolucionesPorDni = {
-        "https:\/\/drive.google.com\/file\/d\/1YXakdLw9LTyrwiehz1l_aI4U3FT6V5BE\/view?usp=drive_link": {
-          "DNI": [
-            18252047,
-            14163535,
-            20051718,
-            22230882,
-            25431573,
-            20684602,
-            26666681,
-            12966214,
-            24061261,
-            12439616,
-            20055826,
-            13501433,
-            21588427,
-            23833653,
-            25871671,
-            18428404,
-            20455423,
-            17304286,
-            24796041,
-            21981482,
-            26229658,
-            17231592
-          ]
-        },
-        "https:\/\/drive.google.com\/file\/d\/1uRcr4YNp4z7rhBN3csuHrxClymkMhyJ6\/view?usp=drive_link": {
-          "DNI": [
-            25523186,
-            27919794,
-            28304282,
-            27966756,
-            26230462,
-            22591053,
-            22060140,
-            21728848
-          ]
-        }
-      }
-    </script>
+    <script src="js/resoluciones.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
