si tiene dos o mas resol

--- a/utiles.html
+++ b/utiles.html
@@ -60,11 +60,19 @@
         <h2 class="reso">Otras vías de comunicación</h2>
         <p>También puede contactar con nosotros usando los siguientes medios</p>
         <ul>
-          <li>Teléfono: 4653-0605</li>
-          <li>Email: consultas@abc.gob.ar</li>
-          <li>Facebook:</li>
-          <li>Twitter:</li>
-          <li>Skype:</li>
+          <li>Dirección: Andrés Ferreyra 2631, Caseros- Pdo. Tres de Febrero</li>
+          <li>Teléfono: 2195-4650</li>
+          <li>Email: consultas117sad@gmail.com</li>
+          <li>Email: sad117@abc.gob.ar</li>
+          <li>actos públicos: apdsad117@abc.gob.ar</li>
+          <li>inscripciones: sad117listados@abc.gob.ar - listado 108A y 108B INFINE</li>
+          <li>inscripciones: emergencias117sad@gmail.com</li>
+          <li>concursos y pruebas de selección: sad117pdeseleccion@abc.gob.ar</li>
+          <li>puntaje anual docente: pad2020sad117@abc.gob.ar</li>
+          <li>expedientes: expedientes117@gmail.com</li>
+          <li>disposiciones jerárquicos: disposicionessad117@gmail.com</li>
+          <li>mad / acrecentamiento: madsad117@abc.gob.ar</li>
+          <li>jubilaciones: jubilaciones117@gmail.com</li>
         </ul>
       </div>
     </main>
@@ -94,7 +102,7 @@
           const telefono = document.getElementById('telefono')?.value.trim() || '';
           const mensaje = document.getElementById('mensaje')?.value.trim() || '';
 
-          const to = 'consultas@abc.gob.ar';
+          const to = 'consultas117sad@gmail.com';
           const subject = `Contacto rápido - ${nombre || 'Sin nombre'}`;
           const bodyLines = [
             `Nombre: ${nombre}`,
