--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vero</title>
+    <title>SAD 3deF</title>
+    <link rel="icon" type="image/jpeg" href="./img/logoSad.jpg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,7 +18,7 @@
     <header>
       <div class="holder">
         <img src="./img/logoSad.jpg" class="logo" />
-        <h1>Mis Archivos</h1>
+        <h1>Mis Resoluciones</h1>
       </div>
     </header>
     <nav>
@@ -38,22 +39,23 @@
           Contactos de Interés
         </h2>
         <dl>
-          <dt>Consultas en general</dt>
+          <dt>Correo electrónico</dt>
           <dd>sad117@abc.gob.ar</dd>
           <dt>Jubilaciones</dt>
           <dd>jubilaciones117@abc.gob.ar</dd>
           <dt>Actos Públicos</dt>
-          <dd>actopublico117@abc.gob.ar</dd>
+          <dd>apdsad117@abc.gob.ar</dd>
           <dt>Inscripciones</dt>
-          <dd>inscri3defebrero@abc.gob.ar</dd>
+          <dd>sad117listados@abc.gob.ar</dd>
+          <dd>listado 108A y 108B INFINE</dd>
         </dl>
       </section>
       <section class="novedades">
         <h2>Novedades</h2>
         <div class="consultanos">
-          <p>Queremos brindarte un servicio de alta calidad y valor.</p>
+          <p>Nuevo Teléfono: 2195-4650</p>
           <span class="cita">Consultanos</span>
-          <span class="autor">consultas@abc.gob.ar</span>
+          <span class="autor">consultas117sad@gmail.com</span>
         </div>
       </section>
     </div>
