--- a/resoluciones.html
+++ b/resoluciones.html
@@ -37,7 +37,7 @@
           Por favor, ingrese un DNI válido de 7 u 8 números.
         </div>
         <div class="button-container">
-          <button onclick="validarDNI()">Enviar</button>
+          <button onclick="validarDNI()">Buscar</button>
           <button onclick="resetearFormulario()">Reset</button>
         </div>
         <div id="resultado"></div>
