--- a/utiles.html
+++ b/utiles.html
@@ -80,9 +80,9 @@
     <section>
       <h2 class="reso">Últimas Cadenas</h2>
       <p class="linkcadenas">
-        Las novedades se publican en la pagina Web de la
-        Secretaría de Asuntos Docentes de Tres de Febrero. Para acceder haz click en 
-        <a href="https://sad117.com.ar/?cat=8">este link</a>
+        Las novedades se publican en la 
+        <a href="https://sad117.com.ar/?cat=8">pagina Web de la
+        Secretaría de Asuntos Docentes de Tres de Febrero.</a>
       </p>
     </section>
     <footer>
