--- a/utiles.html
+++ b/utiles.html
@@ -23,14 +23,44 @@
     </header>
     <nav>
       <ul class="holder">
-        <li><a class="activo" href="index.html">Inicio</a></li>
-        <li><a href="resoluciones.html">Resoluciones</a></li>
-        <li><a href="disposiciones.html">Disposiciones</a></li>
-        <li><a href="utiles.html">Recursos</a></li>
+        <li><a href="index.html">Designaciones</a></li>
+        <li><a href="resoluciones.html">MAD y Acrecentamiento</a></li>
+        <li><a href="disposiciones.html">Renuncias</a></li>
+        <li><a class="activo" href="utiles.html">Recursos</a></li>
       </ul>
     </nav>
 
     <main class="holder contacto">
+      <!-- la sección de contacto tiene tres columnas -->
+      <div>
+        <img src="./img/laptop.jpg" alt="avion" />
+      </div>
+    <div class="contactos">
+      <section class="bienvenidos">
+        <h2>
+          Contactos de Interés
+        </h2>
+        <dl>
+          <dt>Correo electrónico</dt>
+          <dd>sad117@abc.gob.ar</dd>
+          <dt>Jubilaciones</dt>
+          <dd>jubilaciones117@abc.gob.ar</dd>
+          <dt>Actos Públicos</dt>
+          <dd>apdsad117@abc.gob.ar</dd>
+          <dt>Inscripciones</dt>
+          <dd>sad117listados@abc.gob.ar</dd>
+          <dd>listado 108A y 108B INFINE</dd>
+        </dl>
+      </section>
+      <section class="novedades">
+        <h2>Novedades</h2>
+        <div class="consultanos">
+          <p>Nuevo Teléfono: 2195-4650</p>
+          <span class="cita">Consultanos</span>
+          <span class="autor">consultas117sad@gmail.com</span>
+        </div>
+      </section>
+    </div>
       <!-- la sección de contacto tiene dos columnas -->
       <!-- Contenido de la página de contacto -->
       <div>
