--- a/resoluciones.html
+++ b/resoluciones.html
@@ -23,9 +23,9 @@
     </header>
     <nav>
       <ul class="holder">
-        <li><a class="activo" href="index.html">Inicio</a></li>
-        <li><a href="resoluciones.html">Resoluciones</a></li>
-        <li><a href="disposiciones.html">Disposiciones</a></li>
+        <li><a href="index.html">Designaciones</a></li>
+        <li><a class="activo" href="resoluciones.html">MAD y Acrecentamiento</a></li>
+        <li><a href="disposiciones.html">Renuncias</a></li>
         <li><a href="utiles.html">Recursos</a></li>
       </ul>
     </nav>
