--- a/utiles.html
+++ b/utiles.html
@@ -62,41 +62,39 @@
         <!-- Columna 2: Otras vías de comunicación -->
         <div class="datos">
           <h2 class="reso">Otras vías de comunicación</h2>
-          <p>También puede contactar con nosotros usando los siguientes medios</p>
+          <p>También puede contactar con nosotros usando los siguientes medios:</p>
           <ul>
-            <li>Dirección: Andrés Ferreyra 2631, Caseros- Pdo. Tres de Febrero</li>
-            <li>Teléfono: 2195-4650</li>
-            <li>Email: consultas117sad@gmail.com</li>
-            <li>Email: sad117@abc.gob.ar</li>
-            <li>actos públicos: apdsad117@abc.gob.ar</li>
-            <li>inscripciones: sad117listados@abc.gob.ar - listado 108A y 108B INFINE</li>
-            <li>inscripciones: emergencias117sad@gmail.com</li>
-            <li>concursos y pruebas de selección: sad117pdeseleccion@abc.gob.ar</li>
-            <li>puntaje anual docente: pad2020sad117@abc.gob.ar</li>
-            <li>expedientes: expedientes117@gmail.com</li>
-            <li>disposiciones jerárquicos: disposicionessad117@gmail.com</li>
-            <li>mad / acrecentamiento: madsad117@abc.gob.ar</li>
-            <li>jubilaciones: jubilaciones117@gmail.com</li>
+            <li><strong>Dirección:</strong> Andrés Ferreyra 2631, Caseros - Pdo. Tres de Febrero</li>
+            <li><strong>Teléfono:</strong> 2195-4650</li>
+            <li><strong>Email general:</strong> consultas117sad@gmail.com</li>
+            <li><strong>Email institucional:</strong> sad117@abc.gob.ar</li>
+            <li><strong>Actos públicos:</strong> apdsad117@abc.gob.ar</li>
+            <li><strong>Inscripciones (108A y 108B):</strong> sad117listados@abc.gob.ar</li>
+            <li><strong>Emergencias:</strong> emergencias117sad@gmail.com</li>
+            <li><strong>Concursos y selección:</strong> sad117pdeseleccion@abc.gob.ar</li>
+            <li><strong>Puntaje anual docente:</strong> pad2020sad117@abc.gob.ar</li>
+            <li><strong>Expedientes:</strong> expedientes117@gmail.com</li>
+            <li><strong>Disposiciones jerárquicos:</strong> disposicionessad117@gmail.com</li>
+            <li><strong>MAD / Acrecentamiento:</strong> madsad117@abc.gob.ar</li>
+            <li><strong>Jubilaciones:</strong> jubilaciones117@gmail.com</li>
           </ul>
         </div>
       </div>
 
-      <!-- SECCIÓN INFERIOR: TRES COLUMNAS -->
+      <!-- SECCIÓN INFERIOR: IMAGEN -->
       <div class="contactos-inferior">
-        <!-- Columna 1: Imagen -->
+        <!-- Imagen centrada -->
         <div class="imagen-contacto">
-          <img src="./img/laptop.jpg" alt="oficina" />
+          <img src="./img/laptop.jpg" alt="Oficina de la SAD" />
         </div>
       </div>
+      
+      <!-- ENLACE A CADENAS CENTRADO -->
+      <div class="enlace-cadenas">
+        <p><a href="https://sad117.com.ar/?p=15356">Consultar Cadenas</a></p>
+      </div>
     </main>
-    <section>
-      <h2 class="reso">Últimas Cadenas</h2>
-      <p class="linkcadenas">
-        Las novedades se publican en la 
-        <a href="https://sad117.com.ar/?cat=8">pagina Web de la
-        Secretaría de Asuntos Docentes de Tres de Febrero.</a>
-      </p>
-    </section>
+    
     <footer>
       <p>
         SAD de Tres de Febrero &copy; 2024 - Todos los derechos reservados -
