--- a/utiles.html
+++ b/utiles.html
@@ -31,8 +31,8 @@
     </nav>
 
     <main class="holder">
-      <!-- SECCIÓN SUPERIOR: DOS COLUMNAS -->
-      <div class="contacto-superior">
+      <!-- SECCIÓN: TRES COLUMNAS IGUALES -->
+      <div class="tres-columnas">
         <!-- Columna 1: Formulario de Contacto Rápido -->
         <div class="formulario-contacto">
           <h2 class="reso">Contacto Rápido</h2>
@@ -79,19 +79,16 @@
             <li><strong>Jubilaciones:</strong> jubilaciones117@gmail.com</li>
           </ul>
         </div>
-      </div>
 
-      <!-- SECCIÓN INFERIOR: IMAGEN -->
-      <div class="contactos-inferior">
-        <!-- Imagen centrada -->
-        <div class="imagen-contacto">
-          <img src="./img/laptop.jpg" alt="Oficina de la SAD" />
+        <!-- Columna 3: Imagen y enlace a cadenas -->
+        <div class="imagen-y-enlace">
+          <div class="imagen-contacto">
+            <img src="./img/laptop.jpg" alt="Oficina de la SAD" />
+          </div>
+          <div class="enlace-cadenas">
+            <p><a href="https://sad117.com.ar/?p=15356">Consultar Cadenas</a></p>
+          </div>
         </div>
-      </div>
-      
-      <!-- ENLACE A CADENAS CENTRADO -->
-      <div class="enlace-cadenas">
-        <p><a href="https://sad117.com.ar/?p=15356">Consultar Cadenas</a></p>
       </div>
     </main>
     
