--- a/utiles.html
+++ b/utiles.html
@@ -30,81 +30,81 @@
       </ul>
     </nav>
 
-    <main class="holder contacto">
-      <!-- la sección de contacto tiene tres columnas -->
-      <div>
-        <img src="./img/laptop.jpg" alt="avion" />
+    <main class="holder recursos">
+      <!-- Fila 1: dos columnas (Contacto rápido | Otras vías) -->
+      <div class="recursos-grid-top">
+        <section class="contacto-rapido">
+          <h2 class="reso">Contacto Rápido</h2>
+          <form id="contactoForm" class="formulario">
+            <p>
+              <label for="nombre">Nombre</label>
+              <input type="text" id="nombre" name="nombre" required />
+            </p>
+            <p>
+              <label for="email">Email</label>
+              <input type="email" id="email" name="email" required />
+            </p>
+            <p>
+              <label for="telefono">Teléfono</label>
+              <input type="text" id="telefono" name="telefono" />
+            </p>
+            <p>
+              <label for="mensaje">Mensaje</label>
+              <textarea id="mensaje" name="mensaje" required></textarea>
+            </p>
+            <p>
+              <input type="submit" value="Enviar" class="button-enviar" />
+            </p>
+          </form>
+        </section>
+        <aside class="datos">
+          <h2 class="reso">Otras vías de comunicación</h2>
+          <p>También puede contactar con nosotros usando los siguientes medios</p>
+          <ul>
+            <li>Dirección: Andrés Ferreyra 2631, Caseros- Pdo. Tres de Febrero</li>
+            <li>Teléfono: 2195-4650</li>
+            <li>Email: consultas117sad@gmail.com</li>
+            <li>Email: sad117@abc.gob.ar</li>
+            <li>actos públicos: apdsad117@abc.gob.ar</li>
+            <li>inscripciones: sad117listados@abc.gob.ar - listado 108A y 108B INFINE</li>
+            <li>inscripciones: emergencias117sad@gmail.com</li>
+            <li>concursos y pruebas de selección: sad117pdeseleccion@abc.gob.ar</li>
+            <li>puntaje anual docente: pad2020sad117@abc.gob.ar</li>
+            <li>expedientes: expedientes117@gmail.com</li>
+            <li>disposiciones jerárquicos: disposicionessad117@gmail.com</li>
+            <li>mad / acrecentamiento: madsad117@abc.gob.ar</li>
+            <li>jubilaciones: jubilaciones117@gmail.com</li>
+          </ul>
+        </aside>
       </div>
-    <div class="contactos">
-      <section class="bienvenidos">
-        <h2>
-          Contactos de Interés
-        </h2>
-        <dl>
-          <dt>Correo electrónico</dt>
-          <dd>sad117@abc.gob.ar</dd>
-          <dt>Jubilaciones</dt>
-          <dd>jubilaciones117@abc.gob.ar</dd>
-          <dt>Actos Públicos</dt>
-          <dd>apdsad117@abc.gob.ar</dd>
-          <dt>Inscripciones</dt>
-          <dd>sad117listados@abc.gob.ar</dd>
-          <dd>listado 108A y 108B INFINE</dd>
-        </dl>
-      </section>
-      <section class="novedades">
-        <h2>Novedades</h2>
-        <div class="consultanos">
-          <p>Nuevo Teléfono: 2195-4650</p>
-          <span class="cita">Consultanos</span>
-          <span class="autor">consultas117sad@gmail.com</span>
+
+      <!-- Fila 2: tres columnas (Imagen | Contactos de interés | Novedades) -->
+      <div class="recursos-grid-bottom">
+        <div class="recurso-imagen">
+          <img src="./img/laptop.jpg" alt="Imagen ilustrativa" />
         </div>
-      </section>
-    </div>
-      <!-- la sección de contacto tiene dos columnas -->
-      <!-- Contenido de la página de contacto -->
-      <div>
-        <h2 class="reso">Contacto Rápido</h2>
-        <form id="contactoForm" class="formulario">
-          <p>
-            <label for="nombre">Nombre</label>
-            <input type="text" id="nombre" name="nombre" required />
-          </p>
-          <p>
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required />
-          </p>
-          <p>
-            <label for="telefono">Teléfono</label>
-            <input type="text" id="telefono" name="telefono" />
-          </p>
-          <p>
-            <label for="mensaje">Mensaje</label>
-            <textarea id="mensaje" name="mensaje" required></textarea>
-          </p>
-          <p>
-            <input type="submit" value="Enviar" class="button-enviar" />
-          </p>
-        </form>
-      </div>
-      <div class="datos">
-        <h2 class="reso">Otras vías de comunicación</h2>
-        <p>También puede contactar con nosotros usando los siguientes medios</p>
-        <ul>
-          <li>Dirección: Andrés Ferreyra 2631, Caseros- Pdo. Tres de Febrero</li>
-          <li>Teléfono: 2195-4650</li>
-          <li>Email: consultas117sad@gmail.com</li>
-          <li>Email: sad117@abc.gob.ar</li>
-          <li>actos públicos: apdsad117@abc.gob.ar</li>
-          <li>inscripciones: sad117listados@abc.gob.ar - listado 108A y 108B INFINE</li>
-          <li>inscripciones: emergencias117sad@gmail.com</li>
-          <li>concursos y pruebas de selección: sad117pdeseleccion@abc.gob.ar</li>
-          <li>puntaje anual docente: pad2020sad117@abc.gob.ar</li>
-          <li>expedientes: expedientes117@gmail.com</li>
-          <li>disposiciones jerárquicos: disposicionessad117@gmail.com</li>
-          <li>mad / acrecentamiento: madsad117@abc.gob.ar</li>
-          <li>jubilaciones: jubilaciones117@gmail.com</li>
-        </ul>
+        <section class="bienvenidos">
+          <h2>Contactos de Interés</h2>
+          <dl>
+            <dt>Correo electrónico</dt>
+            <dd>sad117@abc.gob.ar</dd>
+            <dt>Jubilaciones</dt>
+            <dd>jubilaciones117@abc.gob.ar</dd>
+            <dt>Actos Públicos</dt>
+            <dd>apdsad117@abc.gob.ar</dd>
+            <dt>Inscripciones</dt>
+            <dd>sad117listados@abc.gob.ar</dd>
+            <dd>listado 108A y 108B INFINE</dd>
+          </dl>
+        </section>
+        <section class="novedades">
+          <h2>Novedades</h2>
+          <div class="consultanos">
+            <p>Nuevo Teléfono: 2195-4650</p>
+            <span class="cita">Consultanos</span>
+            <span class="autor">consultas117sad@gmail.com</span>
+          </div>
+        </section>
       </div>
     </main>
     <section>
