--- a/utiles.html
+++ b/utiles.html
@@ -78,41 +78,16 @@
         </aside>
       </div>
 
-      <!-- Fila 2: tres columnas (Imagen | Contactos de interés | Novedades) -->
-      <div class="recursos-grid-bottom">
-        <div class="recurso-imagen">
-          <img src="./img/laptop.jpg" alt="Imagen ilustrativa" />
-        </div>
-        <section class="bienvenidos">
-          <h2>Contactos de Interés</h2>
-          <dl>
-            <dt>Correo electrónico</dt>
-            <dd>sad117@abc.gob.ar</dd>
-            <dt>Jubilaciones</dt>
-            <dd>jubilaciones117@abc.gob.ar</dd>
-            <dt>Actos Públicos</dt>
-            <dd>apdsad117@abc.gob.ar</dd>
-            <dt>Inscripciones</dt>
-            <dd>sad117listados@abc.gob.ar</dd>
-            <dd>listado 108A y 108B INFINE</dd>
-          </dl>
-        </section>
-        <section class="novedades">
-          <h2>Novedades</h2>
-          <div class="consultanos">
-            <p>Nuevo Teléfono: 2195-4650</p>
-            <span class="cita">Consultanos</span>
-            <span class="autor">consultas117sad@gmail.com</span>
-          </div>
-        </section>
+      <!-- Imagen centrada -->
+      <div class="imagen-centrada">
+        <img src="./img/laptop.jpg" alt="Imagen ilustrativa" />
       </div>
     </main>
-    <section>
-      <h2 class="reso">Últimas Cadenas</h2>
+    
+    <!-- Enlace a cadenas centrado -->
+    <section class="seccion-cadenas">
       <p class="linkcadenas">
-        Las novedades se publican en la 
-        <a href="https://sad117.com.ar/?cat=8">pagina Web de la
-        Secretaría de Asuntos Docentes de Tres de Febrero.</a>
+        <a href="https://sad117.com.ar/?p=15356">Consultar Cadenas</a>
       </p>
     </section>
     <footer>
